javaのoptionを変更できる様に修正